--- a/package.json
+++ b/package.json
@@ -1,14 +1,11 @@
 {
   "name": "fileto",
-  "version": "0.1.1",
+  "version": "0.1.2",
   "description": "A little library to work with Javascript File objects",
   "main": "fileto.js",
   "scripts": {
-    "build": "terser fileto.js --compress --mangle -o fileto.min.js"
+    "build": "npx terser fileto.js --compress --mangle -o fileto.min.js"
   },
   "author": "Tony Boyles <nsp3@cdc.gov>",
-  "license": "Apache 2.0",
-  "devDependencies": {
-    "terser": "^3.17.0"
-  }
+  "license": "Apache 2.0"
 }
